Replaced every usage of RealParameter and Function.